--- a/style/style.css
+++ b/style/style.css
@@ -350,8 +350,6 @@ textarea {
   flex-direction: column;
 }
 .main__nav {
-  width: 1200px;
-  margin: 0 auto;
   margin-top: 60px;
   display: flex;
   flex-direction: row;
@@ -370,8 +368,6 @@ textarea {
 .main__container {
   display: flex;
   flex-direction: row;
-  width: 1200px;
-  margin: 0 auto;
 }
 .main__container__text {
   display: flex;
@@ -396,9 +392,15 @@ textarea {
   background: #F1CDB3;
   border-radius: 100px;
 }
+.main__container__img img {
+  height: 82.8%;
+}
+
 .about {
   display: flex;
-  flex-direction: row;
+}
+.about .wrapper {
+  display: flex;
 }
 .about__left {
   display: flex;
@@ -407,23 +409,22 @@ textarea {
 .about__right {
   display: flex;
   flex-basis: 50%;
-  flex-direction: column;
   gap: 25px;
-  margin-top: 94px;
-  margin-bottom: 94px;
+  flex-direction: column;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 .about__right__title {
-  color: #545454;
   font-family: Georgia;
   font-size: 35px;
   font-weight: 400;
   line-height: 45px;
   letter-spacing: 0.06em;
   text-align: left;
-  width: 370px;
+  color: #545454;
+  max-width: 370px;
 }
 .about__right__subtitle {
-  max-width: 430px;
   font-family: Arial;
   font-size: 15px;
   font-weight: 400;
@@ -431,4 +432,262 @@ textarea {
   letter-spacing: 0px;
   text-align: left;
   color: #4C4C4C;
+}
+
+.carousel {
+  background: #F6F6F6;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+}
+.carousel .wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.carousel__title {
+  font-family: Georgia;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: #545454;
+  text-align: center;
+  padding-top: 30px;
+}
+.carousel__cards {
+  display: flex;
+  flex-direction: row;
+  gap: 90px;
+}
+.carousel__cards__fill {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  text-align: center;
+  font-family: Georgia;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0.06em;
+  background: #FAFAFA;
+  padding-bottom: 15px;
+}
+.carousel__cards__fill button {
+  border: 1px solid #F1CDB3;
+  background-color: #FAFAFA;
+  border-radius: 100px;
+  padding: 15px 45px;
+}
+.carousel__button {
+  display: flex;
+  justify-content: center;
+}
+.carousel__button button {
+  background-color: #F1CDB3;
+  border-radius: 100px;
+  border: 0;
+  padding: 15px 45px;
+}
+
+.help {
+  background: #FFFFFF;
+}
+.help__title {
+  font-family: Georgia;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: #545454;
+  text-align: center;
+  margin-top: 80px;
+}
+.help__icons {
+  display: flex;
+  flex-direction: column;
+}
+.help__icons__first {
+  display: flex;
+  flex-direction: row;
+  gap: 120px;
+  justify-content: center;
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+.help__icons__first .box1, .help__icons__first .box2, .help__icons__first .box3, .help__icons__first .box4, .help__icons__first .box5 {
+  text-align: center;
+  width: 143px;
+  height: 113px;
+}
+.help__icons__first .box1 h3, .help__icons__first .box2 h3, .help__icons__first .box3 h3, .help__icons__first .box4 h3, .help__icons__first .box5 h3 {
+  padding-top: 30px;
+}
+.help__icons__second {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 80px;
+}
+.help__icons__second .box6, .help__icons__second .box7, .help__icons__second .box8, .help__icons__second .box9 {
+  text-align: center;
+}
+.help__icons__second .box6 h3, .help__icons__second .box7 h3, .help__icons__second .box8 h3, .help__icons__second .box9 h3 {
+  padding-top: 30px;
+}
+
+.donation {
+  background-color: #F6F6F6;
+}
+.donation .wrapper {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 80px;
+  padding-top: 60px;
+}
+.donation__img {
+  display: flex;
+  flex-basis: 50%;
+}
+.donation__text {
+  display: flex;
+  flex-basis: 50%;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  margin-left: 20px;
+}
+.donation__text h1 {
+  font-family: Georgia;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: #545454;
+  text-align: left;
+  margin-top: 80px;
+}
+.donation__text p {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.06em;
+  color: #4C4C4C;
+}
+.donation__text__card {
+  display: flex;
+  flex-direction: row;
+  width: 380px;
+  background-color: #F1CDB3;
+  border-radius: 10px;
+}
+.donation__text__card img {
+  padding: 10px 15px;
+}
+.donation__text__card h2 {
+  padding: 10px 15px;
+  font-family: Georgia;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0.06em;
+  text-align: left;
+}
+.donation__text .itallic {
+  font-family: "Arial";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #B2B2B2;
+}
+
+.footer {
+  background: url(../images/footer-gradient-background.png) no-repeat;
+  background-size: cover;
+}
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 40px;
+  margin: 0 40px;
+}
+.footer__text1 {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 280px;
+}
+.footer__text1__title h1 {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  color: white;
+  letter-spacing: 0.06em;
+}
+.footer__text1__box1 {
+  display: flex;
+  gap: 20px;
+}
+.footer__text1__box1 p {
+  color: #F1CDB3;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+}
+.footer__text1__box2 {
+  display: flex;
+  gap: 20px;
+}
+.footer__text1__box2 p {
+  color: #F1CDB3;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+}
+.footer__text2 {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 310px;
+}
+.footer__text2__title h1 {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: white;
+}
+.footer__text2__box1 {
+  display: flex;
+  gap: 20px;
+}
+.footer__text2__box1 p {
+  color: #F1CDB3;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+}
+.footer__text2__box2 {
+  display: flex;
+  gap: 20px;
+}
+.footer__text2__box2 p {
+  color: #F1CDB3;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
 }/*# sourceMappingURL=style.css.map */
